[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sia-script"
version = "0.1.0"
description = "Simplified Integrated Architecture — unified simplified frameworks like SiaML, SiaNTT, and more."
authors = [
    { name = "Naga Sai Durga Nagesh", email = "sbvnagesh00@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["SIA", "Simplified Integrated Architecture", "Python", "ML", "OOP", "ntt", "entity"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/nagesh-9/sia"
"Company" = "SIA SOFTWARE INNOVATIONS"

[tool.setuptools.packages.find]
where = ["sia"]

